chapter-11/istio/istio-waypoint-proxy/chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-waypoint-proxy
spec:
  type: ClusterIP
  ports:
    - name: hbone
      port: 15008
      protocol: TCP
      targetPort: 15008
