chapter-11/istio/istio-waypoint-proxy/chart/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio.io/rev: stable
    istio.io/waypoint-for: service
  name: istio-waypoint-proxy
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - name: ztunnel
      port: 15008
      protocol: HBONE
      allowedRoutes:
        namespaces:
          from: All
